Worked on chat functionality

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="lightGreen">#19ab60</color>
     <color name="darkGreen">#008169</color>
+    <color name="mint_green">#c3f7d2</color>
 </resources>
